--- a/Exercícios/ex001.html
+++ b/Exercícios/ex001.html
@@ -7,9 +7,12 @@
     <title>Meu Primeiro Programa</title>
     <style>
         body {
-            background-color: rosybrown;
+            background-color: rgb(105, 105, 173);
             color: white;
-            font-family: 'Times New Roman', Times, serif;
+            font: normal 20pt Arial;
+        }
+        h1 {
+            color: rgb(255, 212, 22);
         }
     </style>
 </head>
@@ -20,8 +23,8 @@
     <p>Já me livrei da maldição.</p>
     <script>
         window.alert('Minha primeira mensangem')
-        window.confirm('Está gostando de JS?')
-        window.prompt('Qual é seu nome?') 
+        window.confirm('Está gostando de JS?') // Janela com botão ok e Cancel...
+        window.prompt('Qual é seu nome?')  // Vai perguntar o nome...
     </script>
 </body>
 </html>
