--- a/Exercícios/aula14ex/ex016/modelo.html
+++ b/Exercícios/aula14ex/ex016/modelo.html
@@ -4,19 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Vamos Contar</h1>
     </header>
     <section>
-        <div>
-            testando...
+        <div id="dados">
+            <p>
+                <label for="txtini">Inicio: </label>
+                <input type="number" name="ini" id="txti">
+            </p>
+            <p>
+                <label for="txtfim">Fim: </label>
+                <input type="number" name="fim" id="txtf">
+            </p>
+            <p>
+                <label for="txtpas">Passo: </label>
+                <input type="number" name="pas" id="txtp">
+            </p>
+            <p><input type="button" value="Contar" onclick="contar()"></p>
         </div>
-        <div>
-            Olá!
+        <div id="res">
+            Preparando a contagem...
         </div>
     </section>
     <footer>
